# memry

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  TODOS.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  skills-lock.json  turbo.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  e2e.yml  electron-freeze.yml  lockfile-drift.yml  release.yml
apps/desktop/: README.md  electron.vite.config.ts  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
apps/desktop-tauri/: .gitignore  README.md  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/examples/: bench_m2.rs  generate_bindings.rs
apps/desktop-tauri/src-tauri/migrations/: 0000_thankful_luke_cage.sql  0001_married_shadow_king.sql  0002_broken_sleeper.sql  0003_shallow_gladiator.sql  0004_odd_silver_sable.sql  0005_old_mac_gargan.sql  0006_late_infant_terrible.sql  0007_safe_sunspot.sql  0008_blushing_magma.sql  0009_lumpy_gladiator.sql  0010_dizzy_natasha_romanoff.sql  0011_silent_shooting_star.sql  0012_lush_veda.sql  0013_last_guardian.sql  0014_dazzling_leopardon.sql  0015_brief_hex.sql  0016_lovely_mastermind.sql  0017_spotty_mongu.sql  0018_greedy_stepford_cuckoos.sql  0019_material_lethal_legion.sql  0020_search_reasons.sql  0021_inbox_jobs.sql  0022_notes_journal_vault.sql  0023_folder_configs.sql  0024_google_calendar_foundation.sql  0025_event_target_calendar.sql  0026_calendar_field_clocks.sql  0027_calendar_rich_fields.sql  0028_calendar_source_last_error.sql
apps/desktop-tauri/src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs
apps/desktop-tauri/src-tauri/src/auth/: account.rs  device.rs  linking.rs  mod.rs  redaction.rs  secrets.rs  state.rs  types.rs  vault_keys.rs
apps/desktop-tauri/src-tauri/src/commands/: account.rs  auth.rs  crypto.rs  devices.rs  dialog.rs  lifecycle.rs  linking.rs  mod.rs  secrets.rs  settings.rs  shell.rs  vault.rs
apps/desktop-tauri/src-tauri/src/crypto/: encoding.rs  kdf.rs  mod.rs  nonces.rs  primitives.rs  sign_verify.rs  vectors.rs
apps/desktop-tauri/src-tauri/src/db/: bookmarks.rs  calendar_bindings.rs  calendar_events.rs  calendar_external_events.rs  calendar_sources.rs  folder_configs.rs  inbox.rs  migrations.rs  mod.rs  note_metadata.rs  note_positions.rs  notes_cache.rs  projects.rs  reminders.rs  saved_filters.rs  search_reasons.rs  settings.rs  statuses.rs  sync_devices.rs  sync_history.rs  sync_queue.rs  sync_state.rs  tag_definitions.rs  tasks.rs
apps/desktop-tauri/src-tauri/src/keychain/: macos.rs  memory.rs  mod.rs  service.rs
apps/desktop-tauri/src-tauri/src/sync/: auth_client.rs  http.rs  mod.rs
apps/desktop-tauri/src-tauri/src/vault/: frontmatter.rs  fs.rs  mod.rs  notes_io.rs  paths.rs  preferences.rs  registry.rs  state.rs  watcher.rs
apps/desktop-tauri/src-tauri/tests/: auth_device_test.rs  auth_redaction_test.rs  auth_secrets_test.rs  auth_state_test.rs  auth_vault_keys_test.rs  commands_auth_test.rs  crypto_kdf_test.rs  crypto_primitives_test.rs  crypto_sign_verify_test.rs  keychain_memory_test.rs  migrations_test.rs  settings_test.rs  sync_auth_client_test.rs  vault_frontmatter_test.rs  vault_fs_test.rs  vault_notes_io_test.rs  vault_paths_test.rs  vault_preferences_test.rs  vault_registry_test.rs  vault_watcher_test.rs
apps/sync-server/: .dev.vars.example  package.json  wrangler.test.ts  wrangler.toml
assets/: reddit-banner.html
docs/: CONTRIBUTING.md  DESIGN_TOKENS.md  ci-guardrails.md  react-19-adoption.md  testing-vitest.md  turbo-cache.md  upgrading-drizzle.md  upgrading-electron.md
docs/design/: 2026-04-05-calendar-integration-design.md  2026-04-05-calendar-p1-plan.md  hierarchical-tags.md
docs/plan/: bulk-csv-link-import-plan.md  missing-parts.md
docs/plans/: 012-backlinks-collapsible-redesign.md  013-select-multiselect-properties.md  014-property-definitions-settings.md
prompts/m1/: README.md  m1-phase-a-scaffold.md  m1-phase-b-electron-freeze.md  m1-phase-c-deps-styles.md  m1-phase-d-mock-ipc.md  m1-phase-e-renderer-utilities.md  m1-phase-f-renderer-components.md  m1-phase-g-renderer-features.md  m1-phase-h-window-api-rewrite.md  m1-phase-i-rust-commands-bindings.md  m1-phase-j-smoke-visual-parity.md
prompts/m2/: README.md  m2-phase-a-db-foundation.md  m2-phase-b-migration-port.md  m2-phase-c-core-domain-structs.md  m2-phase-d-calendar-collections-structs.md  m2-phase-e-sync-foundation-structs.md  m2-phase-f-settings-ipc-slice.md  m2-phase-g-tooling-acceptance.md
prompts/m3/: README.md  m3-phase-a-foundation.md  m3-phase-b-vault-core-io.md  m3-phase-c-preferences-registry.md  m3-phase-d-watcher-runtime-state.md  m3-phase-e-tauri-commands.md  m3-phase-f-protocol-and-dragdrop.md  m3-phase-g-bindings-renderer-bench-pr.md
prompts/m4/: README.md  m4-phase-a-crypto-foundation.md  m4-phase-b-keychain-auth-runtime.md  m4-phase-c-secrets-redaction-http.md  (+4 more)
scripts/: check-architecture-boundaries.js  check-lockfile.js  repair-package-links.js  run-turbo.js  set-desktop-version.mjs
spikes/tauri-risk-discovery/prototypes/s2-yjs-rust/src-tauri/: Cargo.toml  tauri.conf.json
spikes/tauri-risk-discovery/prototypes/s2-yjs-rust/src-tauri/src/: lib.rs
spikes/tauri-risk-discovery/prototypes/s2-yjs-rust/src-tauri/tests/: yrs_interop.rs
spikes/tauri-risk-discovery/prototypes/s3-hybrid/src-tauri/: Cargo.toml  tauri.conf.json
spikes/tauri-risk-discovery/prototypes/s3-hybrid/src-tauri/src/: bench_dump.rs  db_c.rs  lib.rs
spikes/tauri-risk-discovery/prototypes/s3-plugin-sql/src-tauri/: Cargo.toml  tauri.conf.json
spikes/tauri-risk-discovery/prototypes/s3-plugin-sql/src-tauri/src/: lib.rs
spikes/tauri-risk-discovery/prototypes/s3-rusqlite/src-tauri/: Cargo.toml  tauri.conf.json
spikes/tauri-risk-discovery/prototypes/s3-rusqlite/src-tauri/src/: bench_dump.rs  db_a.rs  lib.rs
(+1553 files in other folders)
