[package]
name = "memry-desktop-tauri"
version = "2.0.0-alpha.1"
description = "Memry desktop app (Tauri)"
authors = ["Memry"]
edition = "2021"
default-run = "memry-desktop-tauri"

[lib]
name = "memry_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2.10", features = [] }
tauri-plugin-shell = "2"

# Declared for later milestones — unused at M1 but compile-verified
rusqlite = { version = "0.32", features = ["bundled", "load_extension", "chrono", "serde_json", "hooks"] }
yrs = "0.21"
dryoc = "0.7"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
directories = "5"
specta = { version = "2.0.0-rc.20", features = ["derive"] }
specta-typescript = "0.0.11"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }

# Vault FS + watcher (M3)
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
serde_yaml_ng = "0.10"
mime_guess = "2.0"
sha2 = "0.10"
dunce = "1.0"

# Native dialog + shell plugins (M3)
tauri-plugin-dialog = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
test-helpers = []

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "generate_bindings"
path = "src/bin/generate_bindings.rs"

[[bin]]
name = "bench_m2"
path = "src/bin/bench_m2.rs"
required-features = ["test-helpers"]

[[test]]
name = "migrations_test"
required-features = ["test-helpers"]

[[test]]
name = "settings_test"
required-features = ["test-helpers"]

[[test]]
name = "vault_paths_test"
required-features = ["test-helpers"]
