[package]
name = "memry-desktop-tauri"
version = "2.0.0-alpha.1"
description = "Memry desktop app (Tauri)"
authors = ["Memry"]
edition = "2021"
default-run = "memry-desktop-tauri"

[lib]
name = "memry_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2.10", features = [] }
tauri-plugin-shell = "2"

# Declared for later milestones — unused at M1 but compile-verified
rusqlite = { version = "0.32", features = ["bundled", "load_extension", "chrono", "serde_json", "hooks"] }
yrs = "0.21"
dryoc = "0.7"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
directories = "5"
specta = { version = "2.0.0-rc.20", features = ["derive", "serde_json"] }
specta-typescript = "0.0.11"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }

# Vault FS + watcher (M3)
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
serde_yaml_ng = "0.10"
mime_guess = "2.0"
sha2 = "0.10"
dunce = "1.0"
nanoid = "0.4"
urlencoding = "2.1"

# Native dialog + shell plugins (M3)
tauri-plugin-dialog = "2"

# Crypto + auth + keychain (M4)
base64 = "0.22"
hex = "0.4"
zeroize = { version = "1.8", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
security-framework = "3"
# Task 1 spike (M4 Phase A) confirmed dryoc 0.7.2 ships only the secretstream
# XChaCha20-Poly1305 variant; the one-shot AEAD API is missing. Use the
# RustCrypto crate for encrypt_blob/decrypt_blob and keep dryoc for Argon2id,
# crypto_kdf, Ed25519, and BLAKE2b.
chacha20poly1305 = { version = "0.10", features = ["std"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
test-helpers = []

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"

[[bin]]
name = "generate_bindings"
path = "src/bin/generate_bindings.rs"

[[bin]]
name = "bench_m2"
path = "src/bin/bench_m2.rs"
required-features = ["test-helpers"]

[[test]]
name = "migrations_test"
required-features = ["test-helpers"]

[[test]]
name = "settings_test"
required-features = ["test-helpers"]

[[test]]
name = "vault_paths_test"
required-features = ["test-helpers"]

[[test]]
name = "vault_fs_test"
required-features = ["test-helpers"]

[[test]]
name = "vault_frontmatter_test"
required-features = ["test-helpers"]

[[test]]
name = "vault_notes_io_test"
required-features = ["test-helpers"]

[[test]]
name = "vault_preferences_test"
required-features = ["test-helpers"]

[[test]]
name = "vault_registry_test"
required-features = ["test-helpers"]

[[test]]
name = "vault_watcher_test"
required-features = ["test-helpers"]

[[test]]
name = "crypto_primitives_test"
required-features = ["test-helpers"]

[[test]]
name = "crypto_kdf_test"
required-features = ["test-helpers"]

[[test]]
name = "crypto_sign_verify_test"
required-features = ["test-helpers"]

[[test]]
name = "keychain_memory_test"
required-features = ["test-helpers"]

[[test]]
name = "auth_state_test"
required-features = ["test-helpers"]

[[test]]
name = "auth_vault_keys_test"
required-features = ["test-helpers"]

[[test]]
name = "auth_secrets_test"
required-features = ["test-helpers"]

[[test]]
name = "auth_redaction_test"
required-features = ["test-helpers"]
