[package]
name = "s2-yjs-rust"
version = "0.1.0"
description = "S2 Prototype B - yrs authoritative in Rust, renderer shadow Y.Doc"
authors = ["spike"]
edition = "2021"
default-run = "s2-yjs-rust"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yrs = "0.21"
