[package]
name = "s3-plugin-sql"
version = "0.1.0"
description = "S3 Option B — @tauri-apps/plugin-sql (sqlx backed)"
authors = ["spike"]
edition = "2021"
default-run = "s3-plugin-sql"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
