[package]
name = "s3-rusqlite"
version = "0.1.0"
description = "S3 Option A — rusqlite + custom Tauri commands"
authors = ["spike"]
edition = "2021"
default-run = "s3-rusqlite"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "load_extension"] }
rand = "0.8"
